[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urn-calculator"
version = "0.0.2"
description = "Multivariate hypergeometric command line calculator."
readme = "README.md"
authors = [{ name = "Alex Riley" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Utilities",
    "Typing :: Typed",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["calculator", "probability", "count", "draw", "random", "sample", "hypergeometric"]
dependencies = [
    "lark >= 1.1.5",
    "sympy >= 1.12",
    "tabulate >= 0.9.0",
    "uniplot >= 0.10.0",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest", "ruff"]
gmpy2 = ["gmpy2"]

[project.urls]
Homepage = "https://github.com/ajcr/urn"

[project.scripts]
urn = "urn.cli:main"

[tool.pytest.ini_options]
pythonpath = [
    "src"
]
